erDiagram
    USER ||--|| USER_PROFILE : has
    USER ||--o{ SHIPPING_ADDRESS : owns
    USER ||--o{ ORDER : places
    USER ||--o{ RENTAL_ORDER : rents
    USER ||--o{ REVIEW : writes
    USER ||--o{ VERIFICATION_SESSION : submits
    ROLE }o--o{ PERMISSION : grants
    USER }o--o{ ROLE : assigned
    CATEGORY ||--o{ PRODUCT : contains
    PRODUCT ||--o{ PRODUCT_IMAGE : has
    PRODUCT ||--o{ PRODUCT_PRICE_HISTORY : tracks
    PRODUCT ||--o{ INVENTORY_AUDIT_LOG : changes
    ORDER ||--o{ ORDER_ITEM : includes
    PRODUCT ||--o{ ORDER_ITEM : sold
    RENTAL_ORDER ||--o{ RENTAL_ORDER_ITEM : includes
    PRODUCT ||--o{ DEVICE : has
    DEVICE ||--o{ RENTAL_ORDER_ITEM : assigned
    RENTAL_ORDER ||--|| RENTAL_CONTRACT : has
    RENTAL_ORDER ||--o{ RENTAL_PAYMENT : paid_by
    RENTAL_ORDER ||--o{ RENTAL_HANDOVER_REPORT : handover
    RENTAL_ORDER ||--o{ RENTAL_RETURN_REPORT : return
    VOUCHER ||--o{ ORDER : applies
    VERIFICATION_SESSION ||--o{ VERIFICATION_ARTIFACT : contains
    VERIFICATION_SESSION ||--o{ VERIFICATION_RESULT : produces
    SUPPORT_TICKET }o--|| USER : optional_owner
    AUDIT_LOG }o--|| USER : actor
